Maint: add dependance on yaml

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,6 +47,7 @@ jobs:
 
   build_wheels:
     name: Build pure Python wheel
+    needs: get_version
     runs-on: ubuntu-latest
     steps:
       - name: Checkout do código
