--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -80,8 +80,8 @@ jobs:
       - name: Baixar todos os artefatos
         uses: actions/download-artifact@v4
         with:
+          name: dist
           path: dist
-          pattern: dist-*
           merge-multiple: true
 
       - name: Publicar no PyPI
