--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -86,6 +86,8 @@ jobs:
 
       - name: Publicar no PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        with: 
+          password: ${{ secrets.PYPI_API_TOKEN }}
 
   github_release:
     name: Criar GitHub Release
